fix(theme/HomeFeature): fix shine not rotating with card causing gap (#3511)

--- a/packages/core/src/theme/components/HomeFeature/index.scss
+++ b/packages/core/src/theme/components/HomeFeature/index.scss
@@ -68,6 +68,7 @@
     // fill: var(--rp-home-feature-bg-fill);
     backdrop-filter: blur(10px);
     transition: all 0.3s;
+    overflow: hidden;
 
     &--clickable {
       cursor: pointer;
